--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -23,15 +23,25 @@
         <item name="android:insetTop">0dp</item>
         <item name="android:insetBottom">0dp</item>
         <item name="materialThemeOverlay">@style/ThemeOverlay.AblySubject.TextButton</item>
-        <item name="shapeAppearance">@style/ShapeAppearance.App.LargeComponent</item>
+        <item name="shapeAppearance">@style/ShapeAppearance.App.SmallComponent</item>
     </style>
 
     <style name="ThemeOverlay.AblySubject.TextButton" parent="">
         <item name="colorPrimary">@color/black</item>
     </style>
 
-    <style name="ShapeAppearance.App.LargeComponent" parent="ShapeAppearance.MaterialComponents.LargeComponent">
+    <style name="ShapeAppearance.App.SmallComponent" parent="ShapeAppearance.MaterialComponents.SmallComponent">
         <item name="cornerFamily">rounded</item>
-        <item name="cornerSize">15dp</item>
+        <item name="cornerSize">2dp</item>
+    </style>
+
+    <style name="Widget.AblySubject.Button.OutlinedButton.Capsule">
+        <item name="shapeAppearance">@style/ShapeAppearance.App.CapsuleComponent</item>
+    </style>
+
+    <style name="ShapeAppearance.App.CapsuleComponent" parent="ShapeAppearance.MaterialComponents.SmallComponent">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">30dp</item>
+        <!--<item name="cornerRadius">30dp</item>-->
     </style>
 </resources>
