--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,6 +21,8 @@
             android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:spanCount="2"
+            app:hasFixedSize="@{true}"
+            tools:paddingHorizontal="6dp"
             tools:listitem="@layout/item_product"/>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </layout>
