--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -8,7 +8,7 @@
 
     <item
         android:id="@+id/fragment_favorite"
-        android:icon="@drawable/ic_favorite"
+        android:icon="@drawable/selector_favorite"
         android:title="@string/gnb_title_02_favorites" />
 
 </menu>
