--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,7 +6,7 @@
         <item name="colorPrimaryVariant">@color/black_12</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondary">@android:color/transparent</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
@@ -26,17 +26,28 @@
         <item name="shapeAppearance">@style/ShapeAppearance.App.SmallComponent</item>
     </style>
 
+    <style name="Widget.AblySubject.Button.OutlinedButton.Capsule">
+        <item name="shapeAppearance">@style/ShapeAppearance.App.CapsuleComponent</item>
+    </style>
+
+    <style name="Widget.AblySubject.Button.TextButton" parent="Widget.MaterialComponents.Button.TextButton" >
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="materialThemeOverlay">@style/ThemeOverlay.AblySubject.TextButton</item>
+        <item name="shapeAppearance">@style/ShapeAppearance.MaterialComponents.LargeComponent</item>
+    </style>
+
+    <style name="Widget.AblySubject.Button.TextButton.Capsule">
+        <item name="shapeAppearance">@style/ShapeAppearance.App.CapsuleComponent</item>
+    </style>
+
     <style name="ThemeOverlay.AblySubject.TextButton" parent="">
-        <item name="colorPrimary">@color/black</item>
+        <item name="colorPrimary">@color/watermelon</item>
     </style>
 
     <style name="ShapeAppearance.App.SmallComponent" parent="ShapeAppearance.MaterialComponents.SmallComponent">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">2dp</item>
-    </style>
-
-    <style name="Widget.AblySubject.Button.OutlinedButton.Capsule">
-        <item name="shapeAppearance">@style/ShapeAppearance.App.CapsuleComponent</item>
     </style>
 
     <style name="ShapeAppearance.App.CapsuleComponent" parent="ShapeAppearance.MaterialComponents.SmallComponent">
