--- a/app/src/main/res/layout/item_header_viewpager.xml
+++ b/app/src/main/res/layout/item_header_viewpager.xml
@@ -20,10 +20,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
-            app:onPageScrollStateChanged="@{(position) -> vm.onPageSelected(position)}"
+            app:onPageScrollStateChanged="@{(position) -> indicator.setText((position + 1) + `/` + vm.banners.size())}"
             app:items="@{vm.banners}"/>
 
         <Button style="@style/Widget.AblySubject.Button.OutlinedButton.Capsule"
+            android:id="@+id/indicator"
             android:layout_width="48dp"
             android:layout_height="24dp"
             android:layout_marginEnd="16dp"
@@ -34,7 +35,6 @@
             android:paddingEnd="0dp"
             android:checkable="false"
             android:clickable="false"
-            android:text="@{(vm.currentViewPage + 1) + `/` + vm.banners.size()}"
             android:backgroundTint="#33000000"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="@id/viewpager"
