--- a/app/src/main/res/layout/item_header_viewpager.xml
+++ b/app/src/main/res/layout/item_header_viewpager.xml
@@ -15,29 +15,31 @@
         android:layout_height="wrap_content"
         android:minHeight="260dp"
         android:paddingBottom="12dp">
+
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/viewpager"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:items="@{vm.banners}"
             app:layout_constraintTop_toTopOf="parent"
-            app:onPageScrollStateChanged="@{(position) -> indicator.setText((position + 1) + `/` + vm.banners.size())}"
-            app:items="@{vm.banners}"/>
+            app:onPageScrollStateChanged="@{(position) -> indicator.setText((position + 1) + `/` + vm.banners.size())}" />
 
-        <Button style="@style/Widget.AblySubject.Button.OutlinedButton.Capsule"
+        <Button
             android:id="@+id/indicator"
+            style="@style/Widget.AblySubject.Button.OutlinedButton.Capsule"
             android:layout_width="48dp"
             android:layout_height="24dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="15dp"
-            android:textSize="12sp"
-            android:textColor="#ffffff"
-            android:paddingStart="0dp"
-            android:paddingEnd="0dp"
+            android:backgroundTint="#33000000"
             android:checkable="false"
             android:clickable="false"
-            android:backgroundTint="#33000000"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:paddingStart="0dp"
+            android:paddingEnd="0dp"
+            android:textColor="#ffffff"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="@id/viewpager"
-            tools:text="12/12"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:text="12/12" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
